# drf-vue-boilerplate

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  users_saml.php
certs/: README.md
drfapi/api/: urls.py
myproject/: settings.py  urls.py  views.py
myproject/drfapi/api/: views.py
myproject/myproject/: settings.py
myproject/templates/: index.html
myproject/templates/registration/: login.html
myproject/vue-frontend/: .gitignore  package-lock.json  package.json
myproject/vue-frontend/src/router/: index.js
myproject/vue-frontend/src/views/: Home.vue
templates/: base.html
templates/registration/: access-denied.html  login-error.html  login.html
users/: admin.py  pipeline.py
users/migrations/: 0001_initial.py
vue-frontend/: package-lock.json  package.json  vue.config.js
vue-frontend/src/: App.vue
vue-frontend/src/components/: EchoBox.vue  Greeting.vue
vue-frontend/src/services/: ApiClient.js
vue-frontend/src/views/: Echo.vue
